--- a/css/template-1-styles.css
+++ b/css/template-1-styles.css
@@ -107,6 +107,7 @@ header{
     padding: 2vh 0;
     box-shadow: 0px -3px 2px 1px grey;
     z-index: 100;
+    height: 10vh;
 }
 
 nav{
@@ -172,7 +173,7 @@ section{
     background-position: left;
     background-repeat: no-repeat;
     background-size: cover;
-    height: 100vh;
+    height: 90vh;
     position: relative;
     order: 1;
 }
@@ -207,7 +208,7 @@ section{
     background-position: right;
     background-repeat: no-repeat;
     background-size: cover;
-    height: 100vh;
+    height: 90vh;
     position: relative;
     order: 3;
 }
@@ -266,12 +267,22 @@ section{
 }
 
 .wedding-container .event-container{
+    display: flex;
+    flex-flow: row wrap;
+    align-items: center;
+    justify-content: center;
     background-color: wheat;
     border: 1px solid blue;
     margin: 0 1vw;
+    padding: 1rem;
+}
+
+.wedding-container .event-container iframe{
+    order: 1;
 }
 
 .wedding-container .event-container .event-caption{
+    order: 2;
     border: none;
 }
 
@@ -296,6 +307,13 @@ section{
 @media (min-width:320px)  {
     .wedding-container .event-container{
         display: flex;
+    }
+
+    .wedding-container .event-container iframe{
+        width: 100%;
+    }
+    
+    .wedding-container .event-container .event-caption{
         width: 100%;
     }
     
@@ -329,8 +347,8 @@ section{
 }
 .gallery-container .gallery-inner-container img{
     margin: 1vh 0.5vw;
-    min-width: 20vw;
-    height: 45vh;
+    min-width: 45vw;
+    height: 40vh;
     background-color: springgreen;
     object-fit: cover;
 }
